--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "postgres",
-    "password": "hello123",
-    "database": "blog-app",
+    "password": "",
+    "database": "",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "operatorsAliases": false
